--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install-server": "cd Backend && npm install",
-    "start-server": "cd Backend && node appjs",
+    "start-server": "cd Backend && node server.js",
     "install-client": "cd Frontend && npm install",
     "build-client": "cd Frontend && npm run build",
-    "start-client": "cd Frontend && npm run start"
+    "start-client": "cd Frontend && npm run dev"
   },
   "keywords": [],
   "author": "",
