changes to  package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install-server": "cd Backend && npm install",
-    "start-server": "cd Backend && node server.js",
+    "start-server": "cd Backend && npm start",
     "install-client": "cd Frontend && npm install",
     "build-client": "cd Frontend && npm run build",
     "start-client": "cd Frontend && npm run dev"
