--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
+    "install":"npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
