--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "NETFLIX clone using MERN",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "build": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
