--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,17 +1,3 @@
 {
-  "version": 2,
-
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/app.js"
-    }
-  ]
+ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }]
 }
