--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,3 +1,3 @@
 {
- "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }]
+ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
