--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,5 +1,4 @@
 node_modules
-/config.env
 # Logs
 logs
 *.log
@@ -9,4 +8,6 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-.vercel
+#env
+.env
+
