--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,9 @@
   "name": "netflix",
   "version": "1.0.0",
   "description": "NETFLIX clone using MERN",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "node server.js",
+    "build": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
