--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,4 +1,5 @@
 {
     "version": 2,
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+    "github":{"enabled":false}
   }
